Add Logging library
Usage: On every class you want to use logging add something like
```java
private static final Logger Log = LogManager.getLogger(SomeClass.class);
```

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ mainClassName = 'client.Client'
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.2.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
+
+    implementation 'org.apache.logging.log4j:log4j-api:2.11.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.11.0'
 }
 
 // In this section you declare where to find the dependencies of your project
