--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: java
 
-before_install:
-  - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
+sudo: false
 
-matrix:
-  include:
-    - env: JDK='Oracle JDK 10'
-      install: . ./install-jdk.sh -F 10 -L BCL
+jdk:
+  - oraclejdk10
+
+os:
+ - linux
