--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,11 @@ jdk:
 
 os:
  - linux
+
+ before_cache:
+   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+   - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
+ cache:
+   directories:
+     - $HOME/.gradle/caches/
+     - $HOME/.gradle/wrapper/
